Retire receiver-local audio playback
(cherry picked from commit 598fe61e52d9bbe07e4d30e1b81bab394c2845a4)